--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<meta http-equiv="refresh" content="0;url=https://r8r7.github.io/jonathanrivera/games">
+<meta http-equiv="refresh" content="0;url=https://i.ibb.co/D45czLB/sop.gif">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WF0M82DTKP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WF0M82DTKP');
+</script>
+<title>Index Redirect to gif</title>
