--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0;url=https://i.ibb.co/D45czLB/sop.gif">
+<meta http-equiv="refresh" content="0;url=https://r8r7.github.io/jonathanrivera/games">
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-WF0M82DTKP"></script>
 <script>
