--- a/stuff.html
+++ b/stuff.html
@@ -3,52 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embed Preview for Powerline</title>
+    <title>Embed Fullscreen Preview for Powerline</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
+        /* Remove margins and padding for fullscreen effect */
+        body, html {
             margin: 0;
-            background-color: #f5f5f5;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* Prevent scroll bars from appearing */
         }
 
-        h1 {
-            margin-bottom: 20px;
-        }
-
+        /* Fullscreen iframe */
         iframe {
-            width: 80%;
-            height: 80vh;
-            border: 2px solid #000;
-            border-radius: 8px;
-        }
-
-        .embed-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .note {
-            margin-top: 15px;
-            color: #555;
+            width: 100%;
+            height: 100%;
+            border: none; /* Remove default border for better appearance */
         }
     </style>
 </head>
 <body>
-    <h1>Embed Preview for Powerline Game</h1>
-    <div class="embed-container">
-        <iframe 
-            src="https://powerline.coolmathgames.com"
-            title="Powerline Game"
-            frameborder="0"
-            allowfullscreen>
-        </iframe>
-        <p class="note">If the game doesn't load, ensure that the URL is correct or try refreshing the page.</p>
-    </div>
+    <iframe 
+        src="https://powerline.coolmathgames.com"
+        title="Powerline Game"
+        frameborder="0"
+        allowfullscreen>
+    </iframe>
 </body>
 </html>
